# price-dog

./: .env.sample  README.md  index.py  pyproject.toml
src/: __init__.py  mail.py  task.py
src/parser/: __init__.py  masadoraSuruga.py  suruga.py
src/server/: __init__.py  api.py
